--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,12 +14,38 @@ services:
       - ./:/var/www
     environment:
       APP_ENV: dev
+      DATABASE_URL: "mysql://admin:admin12345@mysql:3306/tourism?serverVersion=5.7&charset=utf8mb4"
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+    ports:
+      - "8080:80"
+    links:
+      - mysql
+    networks:
+      - net
+  mysql:
+    image: mysql:5.7
+    command: mysqld --default-authentication-plugin=mysql_native_password
+    volumes:
+      - tourism-data:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: tourism
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin12345
+    networks:
+      - net
 
 networks:
   net:
     attachable: true
     driver: overlay
+
 volumes:
 ###> doctrine/doctrine-bundle ###
-  db-data:
+  tourism-data:
 ###< doctrine/doctrine-bundle ###
