--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,10 @@ controllers:
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+
+api_login_check:
+    path: /api/login
+
+api_refresh_token:
+    path:       /api/token/refresh
+    controller: gesdinet.jwtrefreshtoken::refresh
