--- a/.env
+++ b/.env
@@ -32,3 +32,7 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=503ccf56c62f819798aa52123b276281
 ###< lexik/jwt-authentication-bundle ###
+
+###> BACKEND ###
+BASE_URI="http://tourism"
+###< BACKEND ###
