--- a/.env
+++ b/.env
@@ -40,3 +40,16 @@ CORS_ALLOW_ORIGIN=^.*$
 ###> BACKEND ###
 BASE_URI="http://tourism"
 ###< BACKEND ###
+
+###> symfony/sendgrid-mailer ###
+MAILER_DSN=sendgrid://key@default
+SENDGRID_KEY=key
+SENDGRID_API=https://api.sendgrid.com
+###< symfony/sendgrid-mailer ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
