--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 supervisord.pid
 src/Controller/TestController.php
 env.local
+docker-compose.override.yml
 ###> ANNOYING STUFF ###
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
