--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
     environment:
       APP_ENV: dev
       DATABASE_URL: "mysql://admin:admin12345@mysql:3306/tourism?serverVersion=5.7&charset=utf8mb4"
+    extra_hosts:
+      - "api.sendgrid.com:3.64.248.189"
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     environment:
