file upload and delete

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ docker-compose.override.yml
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
