--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "gesdinet/jwt-refresh-token-bundle": "^1.1",
+        "league/flysystem-async-aws-s3": "^3.0",
+        "league/flysystem-bundle": "^2.2",
         "lexik/jwt-authentication-bundle": "^2.15",
+        "liip/imagine-bundle": "^2.8",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.5",
@@ -24,17 +27,18 @@
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/http-client": "6.0.*",
+        "symfony/mailer": "6.0.*",
+        "symfony/messenger": "6.0.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
-        "symfony/mailer": "6.0.*",
-        "symfony/messenger": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/sendgrid-mailer": "6.0.*",
         "symfony/serializer": "6.0.*",
         "symfony/validator": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/yaml": "6.0.*",
+        "ext-gd": "*"
     },
     "config": {
         "allow-plugins": {
